--- a/Travel.ipynb
+++ b/Travel.ipynb
@@ -609,8 +609,8 @@
         }
       ],
       "source": [
-        "train = pd.read_csv('./data/train.csv', engine = 'pyarrow') # TODO\n",
-        "test = pd.read_csv('./data/test.csv', engine = 'pyarrow') # TODO\n",
+        "train = pd.read_csv('./data/train.csv', engine = 'pyarrow') \n",
+        "test = pd.read_csv('./data/test.csv', engine = 'pyarrow') \n",
         "\n",
         "train.head()"
       ]
@@ -952,7 +952,6 @@
       "outputs": [],
       "source": [
         "# change type of columns in time_columns into datetime64[ns]\n",
-        "\n",
         "time_columns = ['search_date', 'checkIn_date', 'checkOut_date']\n",
         "for column in time_columns:\n",
         "    train[column] = pd.to_datetime(train[column]) \n",
@@ -969,14 +968,12 @@
       "outputs": [],
       "source": [
         "# Add Days of Stay\n",
-        "\n",
         "duration = train['checkOut_date'] - train['checkIn_date'] \n",
         "train['duration'] = duration.dt.days.astype(int) \n",
         "duration = test['checkOut_date'] - test['checkIn_date'] \n",
         "test['duration'] = duration.dt.days.astype(int) \n",
         "\n",
         "# Add Days between search_date and checkIn_date\n",
-        "\n",
         "days_between = train['checkIn_date'] - train['search_date'] \n",
         "train['days_between'] = days_between.dt.days.astype(int) \n",
         "days_between = test['checkIn_date'] - test['search_date'] \n",
@@ -1191,8 +1188,6 @@
         "\n",
         "ticktext = ['دوشنبه', 'سه‌شنبه', 'چهارشنبه', 'پنج‌شنبه', 'جمعه', 'شنبه', 'یکشنبه'] \n",
         "\n",
-        "# در ادامه‌ی این قسمت از کد تغییری ایجاد نکنید زیرا نمودار شما توسط سیستم داوری بررسی می‌شود و تغییر در این قسمت ممکن است باعث عدم داوری صحیح شود\n",
-        "\n",
         "data = [trace_is_booked, trace_not_booked]\n",
         "\n",
         "layout = go.Layout(\n",
@@ -1264,8 +1259,6 @@
         "trace_not_booked = go.Bar(y = not_booked['checkIn_date_month'].value_counts().sort_index()/len(not_booked) , name='Not Booked') \n",
         "trace_is_booked = go.Bar(y = is_booked['checkIn_date_month'].value_counts().sort_index()/len(is_booked) , name='Booked') \n",
         "\n",
-        "# در ادامه‌ی این قسمت از کد تغییری ایجاد نکنید زیرا نمودار شما توسط سیستم داوری بررسی می‌شود و تغییر در این قسمت ممکن است باعث عدم داوری صحیح شود\n",
-        "\n",
         "data = [trace_is_booked, trace_not_booked]\n",
         "\n",
         "ticktext = ['Jan', 'Feb', 'Mar', 'Apr', 'May', 'Jun', 'Jul', 'Aug', 'Sep', 'Oct', 'Nov', 'Dec']\n",
@@ -1290,7 +1283,7 @@
       },
       "outputs": [],
       "source": [
-        "# TODO (Optional): Make season column for checkIn_date_month or search_date_month\n",
+        " (Optional): Make season column for checkIn_date_month or search_date_month\n",
         "seasons_dict = {1: 'Winter', 2: 'Winter', 3: 'Spring', 4: 'Spring', 5: 'Spring', 6: 'Summer', 7: 'Summer', 8: 'Summer', 9: 'Fall', 10: 'Fall', 11: 'Fall', 12: 'Winter'}\n",
         "\n",
         "train['checkIn_of_year'] = train['checkIn_date_month'].map(seasons_dict)\n",
@@ -1353,8 +1346,6 @@
       "source": [
         "trace_not_booked = go.Scatter(y = not_booked['days_between'].value_counts().sort_index()/len(not_booked) , name='Not Booked', opacity= 0.5) \n",
         "trace_is_booked = go.Scatter(y = is_booked['days_between'].value_counts().sort_index()/len(is_booked) , name='Booked') \n",
-        "\n",
-        "# در ادامه‌ی این قسمت از کد تغییری ایجاد نکنید زیرا نمودار شما توسط سیستم داوری بررسی می‌شود و تغییر در این قسمت ممکن است باعث عدم داوری صحیح شود\n",
         "\n",
         "data = [trace_is_booked, trace_not_booked]\n",
         "\n",
@@ -1425,8 +1416,6 @@
         "trace_not_booked = go.Scatter(y = not_booked['duration'].value_counts().sort_index()/len(not_booked) , name='Not Booked', opacity= 0.5) \n",
         "trace_is_booked = go.Scatter(y = is_booked['duration'].value_counts().sort_index()/len(is_booked) , name='Booked') \n",
         "\n",
-        "# در ادامه‌ی این قسمت از کد تغییری ایجاد نکنید زیرا نمودار شما توسط سیستم داوری بررسی می‌شود و تغییر در این قسمت ممکن است باعث عدم داوری صحیح شود\n",
-        "\n",
         "data = [trace_is_booked, trace_not_booked]\n",
         "\n",
         "layout = go.Layout(\n",
@@ -1461,7 +1450,6 @@
       "outputs": [],
       "source": [
         "#  Add is_abroad column\n",
-        "\n",
         "train['is_abroad'] = 0\n",
         "train.loc[train['user_location_country'] == train['hotel_country'], 'is_abroad'] = 1\n",
         "\n",
@@ -1479,7 +1467,6 @@
       "outputs": [],
       "source": [
         "# Preprocessing (Drop Unnecessary Columns) (Optional)\n",
-        "\n",
         "train = train.drop(columns = ['search_date','checkIn_date','checkOut_date'])\n",
         "test = test.drop(columns = ['search_date','checkIn_date','checkOut_date'])"
       ]
@@ -1494,7 +1481,6 @@
       "outputs": [],
       "source": [
         "# Preprocessing (Make One-hotted Columns) (Optional)\n",
-        "\n",
         "dummy_columns = ['channel'] \n",
         "\n",
         "train = pd.get_dummies(train, columns = dummy_columns)\n",
@@ -1513,7 +1499,6 @@
       "outputs": [],
       "source": [
         "# Preprocessing (Encode Categorical Columns) (Optional)\n",
-        "\n",
         "from sklearn.preprocessing import LabelEncoder\n",
         "le = LabelEncoder()\n",
         "\n",
@@ -1535,7 +1520,6 @@
       "source": [
         "# To make sure orders are correct,\n",
         "# Also If I want to drop any other column I can change this part of code\n",
-        "\n",
         "drop_columns = ['user_location_country','hotel_country','destination']\n",
         "train_columns = train.drop(columns = drop_columns).columns\n",
         "train_columns.drop('is_booking')\n",
@@ -1554,7 +1538,6 @@
       "outputs": [],
       "source": [
         "# Make Data Set Balance (We Also could set class_weights for our model)\n",
-        "\n",
         "train = train.drop(index = train[train['is_booking'] == False].sample(frac =.905).index)\n",
         "train = train.astype(np.float32)\n",
         "test = test.astype(np.float32)"
@@ -1569,8 +1552,7 @@
       },
       "outputs": [],
       "source": [
-        "#  Make Validation Set (Optional)\n",
-        "\n",
+        "# Make Validation Set (Optional)\n",
         "from sklearn.model_selection import train_test_split\n",
         "\n",
         "X_train, X_valid, y_train, y_valid = train_test_split(train.drop(columns = ['is_booking'])\n",
@@ -1587,10 +1569,9 @@
       "outputs": [],
       "source": [
         "# Design Model\n",
-        "\n",
         "model = keras.models.Sequential()\n",
         "model.add(keras.layers.Input(shape=(X_train.shape[1],)))\n",
-        "model.add(keras.layers.BatchNormalization()) # Also Can be done in preparation phase\n",
+        "model.add(keras.layers.BatchNormalization()) \n",
         "model.add(keras.layers.Dense(100, activation='relu'))\n",
         "model.add(keras.layers.Dropout(0.1))\n",
         "model.add(keras.layers.BatchNormalization())\n",
@@ -1609,7 +1590,6 @@
       "outputs": [],
       "source": [
         "# Complie the Model\n",
-        "\n",
         "model.compile(optimizer = keras.optimizers.Adam(),\n",
         "              loss = keras.losses.BinaryCrossentropy(),\n",
         "              metrics = ['auc'])"
@@ -1835,8 +1815,7 @@
         }
       ],
       "source": [
-        "# Train your Model\n",
-        "\n",
+        "# Train the Model\n",
         "epochs = 100 \n",
         "BATCH_SIZE = 4096 \n",
         "\n",
@@ -1879,7 +1858,7 @@
       "source": [
         "from sklearn.metrics import roc_auc_score\n",
         "\n",
-        "#  Evaluate Model\n",
+        "# Evaluate Model\n",
         "roc_auc_score(y_valid, model.predict(X_valid))"
       ]
     },
@@ -1905,8 +1884,7 @@
       ],
       "source": [
         "# Preparing Submission Dataframe\n",
-        "\n",
-        "submission = pd.DataFrame(model.predict(test), columns = ['prediction']) # TODO"
+        "submission = pd.DataFrame(model.predict(test), columns = ['prediction']) "
       ]
     }
   ],
